# hw4

./: CMakeLists.txt  README.md  main.cpp
include/: eighthTask.h  fifthTask.h  firstTask.h  fourthTask.h  ninthTask.h  runTasks.h  secondTask.h  seventhTask.h  sixthTask.h  thirdTask.h
src/: eighthTask.cpp  fifthTask.cpp  firstTask.cpp  fourthTask.cpp  ninthTask.cpp  runTasks.cpp  secondTask.cpp  seventhTask.cpp  sixthTask.cpp  thirdTask.cpp
